nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alien-nginx
spec:
  selector:
    app: alien-nginx
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30036
