snakeapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snakeapp-deployment
  labels:
    app: snakeapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: snakeapp
  template:
    metadata:
      labels:
        app: snakeapp
    spec:
      containers:
      - name: snakeapp
        image: alienke/snake
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: snakeapp-service
spec:
  selector:
    app: snakeapp
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30001
