snakeapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snakeapp-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          # Forward to a Service called 'hello-openshift'
          service:
            name: snakeapp-service
            port:
              number: 3000
        path: /snakeapp
        pathType: Exact
